fix: scrollbar

--- a/assets/styles/components/scrollbar.scss
+++ b/assets/styles/components/scrollbar.scss
@@ -9,6 +9,12 @@
   scrollbar-width: none; /* Firefox */
 }
 
+.modal-open {
+  .scrollbar--body {
+    display: none;
+  }
+}
+
 .scrollbar {
   position: absolute;
   right: 0;
